# iced-app-template

./: Cargo.toml  README.md  index.html
.github/workflows/: static.yml
src/: app.rs  main.rs
