[package]
name = "iced-xplat-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10", features = ["smol"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-timer = "0.2"
